# frontend-next/openapi.json
@@ -1641,6 +1641,23 @@
               ],
               "title": "Interaction Id"
             }
+          },
+          {
+            "name": "due_before",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "anyOf": [
+                {
+                  "type": "string",
+                  "format": "date-time"
+                },
+                {
+                  "type": "null"
+                }
+              ],
+              "title": "Due Before"
+            }
           }
         ],
         "responses": {
